apps/base/media/cinesync/cinesync-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cinesync-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://cinesync.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "CineSync"
    gethomepage.dev/description: "Debrid media organizer and symlink manager"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "mdi-movie-open-cog"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`cinesync.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: cinesync
          port: 8082
  tls: {}
